[package]
name = "rkrga"
version = "0.1.3"
edition = "2021"
license = "MIT"
categories = ["embedded", "external-ffi-bindings", "graphics"]
description = "Rockchip RGA bindings for Rust"
documentation = "https://docs.rs/rkrga"
repository = "https://github.com/varphone/rkrga.git"
authors = ["Varphone Wong <varphone@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
no-default-features = true
default-target = "aarch64-unknown-linux-gnu"

[dependencies]
rkrga-sys = { path = "rkrga-sys", default-features = false }

[dev-dependencies]
paste = "1.0"

[features]
default = ["v1_8_0"]
use-bindgen = ["rkrga-sys/use-bindgen"]
v1_2_0 = ["rkrga-sys/v1_2_0"]
v1_2_2 = ["rkrga-sys/v1_2_2", "v1_2_0"]
v1_2_3 = ["rkrga-sys/v1_2_3", "v1_2_2"]
v1_2_4 = ["rkrga-sys/v1_2_4", "v1_2_3"]
v1_2_5 = ["rkrga-sys/v1_2_5", "v1_2_4"]
v1_2_6 = ["rkrga-sys/v1_2_6", "v1_2_5"]
v1_3_0 = ["rkrga-sys/v1_3_0", "v1_2_6"]
v1_3_1 = ["rkrga-sys/v1_3_1", "v1_3_0"]
v1_4_0 = ["rkrga-sys/v1_4_0", "v1_3_1"]
v1_6_0 = ["rkrga-sys/v1_6_0", "v1_4_0"]
v1_7_2 = ["rkrga-sys/v1_7_2", "v1_6_0"]
v1_8_0 = ["rkrga-sys/v1_8_0", "v1_7_2"]
v1_9_0 = ["rkrga-sys/v1_9_0", "v1_8_0"]

[workspace]
members = ["rkrga-sys"]
