[package]
name = "rkrga-sys"
version = "0.1.1"
edition = "2021"
license = "MIT"
categories = ["embedded", "external-ffi-bindings", "graphics"]
description = "Rockchip RGA FFI bindings for Rust"
documentation = "https://docs.rs/rkrga-sys"
repository = "https://github.com/varphone/rkrga.git"
authors = ["Varphone Wong <varphone@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
no-default-features = true
default-target = "aarch64-unknown-linux-gnu"

[dependencies]

[build-dependencies]
bindgen = { version = "0.59.2", optional = true }

[features]
default = []
use-bindgen = ["bindgen"]
