[package]
name = "rkrga-sys"
version = "1.9.0"
edition = "2021"
license = "MIT"
categories = ["embedded", "external-ffi-bindings", "graphics"]
description = "Rockchip RGA FFI bindings for Rust"
documentation = "https://docs.rs/rkrga-sys"
repository = "https://github.com/varphone/rkrga.git"
authors = ["Varphone Wong <varphone@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
no-default-features = true
default-target = "aarch64-unknown-linux-gnu"

[dependencies]

[build-dependencies]
bindgen = { version = "0.64", optional = true }

[features]
default = ["v1_8_0"]
use-bindgen = ["bindgen"]
v1_2_0 = []
v1_2_2 = ["v1_2_0"]
v1_2_3 = ["v1_2_2"]
v1_2_4 = ["v1_2_3"]
v1_2_5 = ["v1_2_4"]
v1_2_6 = ["v1_2_5"]
v1_3_0 = ["v1_2_6"]
v1_3_1 = ["v1_3_0"]
v1_4_0 = ["v1_3_1"]
v1_6_0 = ["v1_4_0"]
v1_7_2 = ["v1_6_0"]
v1_8_0 = ["v1_7_2"]
v1_9_0 = ["v1_8_0"]
